--- a/index.html
+++ b/index.html
@@ -1,25 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+        <h1 class="display-3">Work Day Scheduler</h1>
+        <p class="lead">A simple calendar app for scheduling your work day</p>
+        <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
-
+        <div class="row time-block">
+            <div class="col-md-1 hour" id="9a">
+            </div>
+            <div class="col-md-10">
+                <textarea name="description" id="desc9a" cols="100"></textarea>
+            </div>
+            <div class="col-md-1">
+                <button class="saveBtn">Save</button>
+            </div>
+        </div>
+        <div class="row time-block">
+            <div class="col-md-1 hour" id="10a">
+            </div>
+            <div class="col-md-10">
+                <textarea name="description" id="desc10a" cols="100"></textarea>
+            </div>
+            <div class="col-md-1">
+                <button class="saveBtn">Save</button>
+            </div>
+        </div>
+        <div class="row time-block">
+            <div class="col-md-1 hour" id="11a">
+            </div>
+            <div class="col-md-10">
+                <textarea name="description" id="desc11a" cols="100"></textarea>
+            </div>
+            <div class="col-md-1">
+                <button class="saveBtn">Save</button>
+            </div>
+        </div>
+        <div class="row time-block">
+            <div class="col-md-1 hour" id="12p">
+            </div>
+            <div class="col-md-10">
+                <textarea name="description" id="desc12p" cols="100"></textarea>
+            </div>
+            <div class="col-md-1">
+                <button class="saveBtn">Save</button>
+            </div>
+        </div>
+        <div class="row time-block">
+            <div class="col-md-1 hour" id="1p">
+            </div>
+            <div class="col-md-10">
+                <textarea name="description" id="desc1p" cols="100"></textarea>
+            </div>
+            <div class="col-md-1">
+                <button class="saveBtn">Save</button>
+            </div>
+        </div>
+        <div class="row time-block">
+            <div class="col-md-1 hour" id="2p">
+            </div>
+            <div class="col-md-10">
+                <textarea name="description" id="desc2p" cols="100"></textarea>
+            </div>
+            <div class="col-md-1">
+                <button class="saveBtn">Save</button>
+            </div>
+        </div>
+        <div class="row time-block">
+            <div class="col-md-1 hour" id="3p">
+            </div>
+            <div class="col-md-10">
+                <textarea name="description" id="desc3p" cols="100"></textarea>
+            </div>
+            <div class="col-md-1">
+                <button class="saveBtn">Save</button>
+            </div>
+        </div>
+        <div class="row time-block">
+            <div class="col-md-1 hour" id="4p">
+            </div>
+            <div class="col-md-10">
+                <textarea name="description" id="desc4p" cols="100"></textarea>
+            </div>
+            <div class="col-md-1">
+                <button class="saveBtn">Save</button>
+            </div>
+        </div>
+        <div class="row time-block">
+            <div class="col-md-1 hour" id="5p">
+            </div>
+            <div class="col-md-10">
+                <textarea name="description" id="desc5p" cols="100"></textarea>
+            </div>
+            <div class="col-md-1">
+                <button class="saveBtn">Save</button>
+            </div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -27,4 +117,5 @@
     <script type="text/javascript" src="moment.js"></script>
     <script type="text/javascript" src="script.js"></script>
 </body>
+
 </html>
