--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="col-md-1 hour">9 AM
             </div>
             <div class="col-md-10 time-block future" data-time="9">
-                <textarea class="description" cols="100"></textarea>
+                <textarea class="description" id="desc1" cols="100"></textarea>
             </div>
             <button class="col-md-1 saveBtn">Save
             </button>
@@ -32,7 +32,7 @@
             <div class="col-md-1 hour">10 AM
             </div>
             <div class="col-md-10 time-block future" data-time="10">
-                <textarea class="description" cols="100"></textarea>
+                <textarea class="description" id="desc2" cols="100"></textarea>
             </div>
             <button class="col-md-1 saveBtn">Save
             </button>
@@ -41,7 +41,7 @@
             <div class="col-md-1 hour">11 AM
             </div>
             <div class="col-md-10 time-block future" data-time="11">
-                <textarea class="description" cols="100"></textarea>
+                <textarea class="description" id="desc3" cols="100"></textarea>
             </div>
             <button class="col-md-1 saveBtn">Save
             </button>
@@ -50,7 +50,7 @@
             <div class="col-md-1 hour">12 PM
             </div>
             <div class="col-md-10 time-block future" data-time="12">
-                <textarea class="description" cols="100"></textarea>
+                <textarea class="description" id="desc4" cols="100"></textarea>
             </div>
             <button class="col-md-1 saveBtn">Save
             </button>
@@ -59,7 +59,7 @@
             <div class="col-md-1 hour">1 PM
             </div>
             <div class="col-md-10 time-block future" data-time="13">
-                <textarea class="description" cols="100"></textarea>
+                <textarea class="description" id="desc5" cols="100"></textarea>
             </div>
             <button class="col-md-1 saveBtn">Save
             </button>
@@ -68,7 +68,7 @@
             <div class="col-md-1 hour">2 PM
             </div>
             <div class="col-md-10 time-block future" data-time="14">
-                <textarea class="description" cols="100"></textarea>
+                <textarea class="description" id="desc6" cols="100"></textarea>
             </div>
             <button class="col-md-1 saveBtn">Save
             </button>
@@ -77,7 +77,7 @@
             <div class="col-md-1 hour">3 PM
             </div>
             <div class="col-md-10 time-block future" data-time="15">
-                <textarea class="description" id="desc3p" cols="100"></textarea>
+                <textarea class="description" id="desc7" cols="100"></textarea>
             </div>
             <button class="col-md-1 saveBtn">Save
             </button>
@@ -86,7 +86,7 @@
             <div class="col-md-1 hour">4 PM
             </div>
             <div class="col-md-10 time-block future" data-time="16">
-                <textarea class="description" id="desc4p" cols="100"></textarea>
+                <textarea class="description" id="desc8" cols="100"></textarea>
             </div>
             <button class="col-md-1 saveBtn">Save
             </button>
@@ -95,7 +95,7 @@
             <div class="col-md-1 hour">5 PM
             </div>
             <div class="col-md-10 time-block future" data-time="17">
-                <textarea class="description" id="desc5p" cols="100"></textarea>
+                <textarea class="description" id="desc9" cols="100"></textarea>
             </div>
             <button class="col-md-1 saveBtn">Save
             </button>
